<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tutorial</string>
    <string name="helloText">Hello world!</string>
    <string name="widgets">widgets</string>
    <string name="check_it_out">Check it out</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="vibrate_on">Vibrate on</string>
    <string name="vibrate_off">Vibrate off</string>
    <string name="temperature">TEMPERATURE</string>
    <string name="calculate">Calculate</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="temperature_converter">Temperature converter</string>
    <string name="onCreateCallback">onCreate Callback\n</string>
    <string name="onPostCreateCallback">onPostCreate Callback\n</string>
    <string name="onDestroyCallback">onDestroy Callback\n</string>
    <string name="onStartCallback">onStart Callback\n</string>
    <string name="onRestartCallback">onRestart Callback\n</string>
    <string name="onResumeCallback">onResume Callback\n</string>
    <string name="onPauseCallback">onPause Callback\n</string>
    <string name="onStopCallback">onStop Callback\n</string>
    <string name="enter_a_message">Enter a message:</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="send">Send</string>
    <string name="lifecycle">Lifecycle</string>
    <string name="message">Message</string>
    <string name="intents">Intents</string>
    <string name="send_message">Send message</string>
    <string name="send_message_object">Send Message (object)</string>
    <string name="send_output_1">Send output 1</string>
    <string name="send_output_2">Send output 2</string>
    <string name="enter_a_number">Enter a number:</string>
    <string name="cancel">Cancel</string>
    <string name="make_phone_dial">Make phone dial</string>
    <string name="make_phone_call">Make phone call</string>
    <string name="open_url_web">Open url web</string>
    <string name="open_map">Open map</string>
    <string name="dialNumber">123456789</string>
    <string name="androidWeb">https://developer.android.com/</string>
    <string name="adapters">Adapters</string>
    <string name="custom_adapter">Custom adapter</string>
    <string name="adapter">Adapter</string>
    <string name="fragments">Fragments</string>
    <string name="fragment_1">Fragment #1</string>
    <string name="fragment_2">Fragment #2</string>
    <string name="fragment_3">Fragment #3</string>
    <string name="fragment_static">Fragment static</string>
    <string name="dialogs">Dialogs</string>
    <string name="pick_time">Pick time</string>
    <string name="pick_date">Pick date</string>
    <string name="alert_dialog">Alert dialog</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="shared_preferences">Shared preferences</string>
    <string name="hello_internal_storage">Hello internal storage!</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="enter_content">Enter content</string>
    <string name="internal_storage">Internal storage</string>
    <string name="data">Data</string>
    <string name="add_new">Add new</string>
    <string name="update_last">Update last</string>
    <string name="delete_first">Delete first</string>
    <string name="json_raw">JSON Raw</string>
    <string name="json">JSON</string>
    <string name="http">HTTP</string>
    <string name="do_get">Do get</string>
    <string name="do_post">Do post</string>
</resources>