<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/surname" />

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/age" />

    <Button
        android:id="@+id/save"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/reset"
        android:layout_width="100dp"
        android:layout_marginStart="10dp"
        android:layout_height="wrap_content"
        android:text="@string/reset" />
</LinearLayout>