<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/fr1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_static" />

    <Button
        android:id="@+id/fr2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_1" />

    <Button
        android:id="@+id/fr3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_2" />

    <FrameLayout
        android:id="@+id/fragmentPlace"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>
</LinearLayout>