<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/purple_700"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:layout_marginTop="20dp"
        android:textColor="@color/red"/>

    <EditText
        android:id="@+id/editTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        android:textColor="@color/white"
        android:gravity="end"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/celciusButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:checked="true"
                    android:text="@string/celsius" />

                <RadioButton
                    android:id="@+id/fahrenheitButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/fahrenheit" />
            </RadioGroup>
        </LinearLayout>
        <Button
            android:id="@+id/calculate"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/calculate" />
    </LinearLayout>
</LinearLayout>